Add currency services & eureka naming server

--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=limits-service
-
+# Profile
+spring.profiles.active=dev
+spring.cloud.config.profile=dev
 # Config Server
 spring.config.import=optional:configserver:http://localhost:8888
-
 # Limits Service
 limits-service.minimum=2
 limits-service.maximum=998
