Add api gateway & Update configurations

--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # application
 spring.application.name=currency-conversion-service
 server.port=8100
+# Config Server
 spring.config.import=configserver:http://localhost:8888
 # Eureka
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
