--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -15,3 +15,4 @@ management.endpoints.web.exposure.include=*
 spring.config.import=configserver:http://localhost:8888
 # Eureka
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
