--- a/naming-server/src/main/resources/application.properties
+++ b/naming-server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8761
 # Eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
