--- a/spring-cloud-configuration-server/src/main/resources/application.properties
+++ b/spring-cloud-configuration-server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
+# Application
 spring.application.name=spring-cloud-configuration-server
-
-# The port that the server should listen on
 server.port=8888
-
- spring.cloud.config.server.git.uri=file://C:/Users/path/to/git-config-repo
+# Config Server
+spring.cloud.config.server.git.uri=file://C:/Users/path/to/git-config-repo
